--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -25,13 +25,16 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".TracksActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
 
         </activity>
+        <activity android:name=".PlayerActivity"
+            android:label="PlayerActivity"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+
 
         <service android:name=".MusicService">
             <intent-filter>
