--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -15,6 +15,7 @@ android {
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -29,13 +30,27 @@ dependencies {
     wearApp project(':wear')
     testCompile 'junit:junit:4.12'
 
+
+    compile 'com.google.android.support:wearable:1.3.0'
+    compile 'com.android.support:support-v4:23.1.1'
     compile 'com.android.support:appcompat-v7:23.1.1'
-    compile 'com.google.android.gms:play-services:8.4.0'
+    compile 'com.android.support:mediarouter-v7:23.1.1'
+    compile 'com.android.support:design:23.1.1'
+    compile 'com.android.support:appcompat-v7:23.1.1'
+    compile 'com.google.android.support:wearable:1.3.0'
     compile 'com.android.support:design:23.1.1'
     compile 'com.android.support:support-v4:23.1.1'
+    compile 'com.android.support:mediarouter-v7:23.1.1'
+    compile 'com.google.android.gms:play-services:8.4.0'
     compile 'com.android.support:recyclerview-v7:23.1.1'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.squareup.retrofit:retrofit:1.9.0'
     compile 'com.squareup.okhttp:okhttp:2.2.0'
     compile 'com.github.kaaes:spotify-web-api-android:0.2.0'
+    compile 'com.android.support:cardview-v7:23.1.1'
+    //compile 'com.android.support:leanback-v17:23.1.1'
+    compile 'com.github.amlcurran.showcaseview:library:5.0.0'
+    compile 'com.google.android.gms:play-services-ads:8.4.0'
+    compile 'com.google.android.gms:play-services-auth:8.4.0'
+    compile 'com.google.android.gms:play-services-gcm:8.4.0'
 }
